force-app/main/default/objects/OfferCodeUpdateLog__c/OfferCodeUpdateLog__c.object-meta.xml
<CustomObject>
    <label>Log Aggiornamento Codici Offerta</label>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Log Aggiornamento Codici Offerta Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Aggiornamento Codici Offerta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>