force-app/main/default/objects/OfferCodeUpdateLog__c/fields/CausalCode__c.field-meta.xml
<CustomField>
    <fullName>CausalCode__c</fullName>
    <label>Codice Causale</label>
    <length>50</length>
    <type>Text</type>
</CustomField>