force-app/main/default/objects/OfferCodeUpdateLog__c/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <label>Data Decorrenza</label>
    <type>Date</type>
</CustomField>