force-app/main/default/objects/OfferCodeUpdateLog__c/fields/OfferCode__c.field-meta.xml
<CustomField>
    <fullName>OfferCode__c</fullName>
    <label>Codice Offerta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>